...
    if (onBoundsChanged == null) return;
    WidgetsBinding.instance.addPostFrameCallback((_) {
      RenderBox? renderObject;
      void findPanel(Element element) {
        if (renderObject != null) return;
        if (element.widget.key ==
            const ValueKey<String>('player.settings.dialog')) {
          renderObject = element.findRenderObject() as RenderBox?;
          return;
        }
        element.visitChildren(findPanel);
      }

...
